<resources>
    <string name="app_name">贝电非信令</string>
    <string name="action_settings">Settings</string>
    <string name="emi_remind_camera">(高于55时，方位角的值可能不准确，请校准！)</string>
    <string name="connect_to_camer_error">连接相机错误</string>
    <string name="failed_to_connect_camera">无法连接到相机</string>
    <string name="zero_angle">0°</string>
    <string name="try_again">重试</string>
    <string name="cancel">取消</string>
    <string name="record">记录</string>
    <string name="stop_search_star">停止搜星</string>
    <string name="kenwen">知道了</string>
    <string name="permission_camera_reason">拍照需要授予相机权限，请到应用详情页面授予该权限。</string>
    <string name="exit">退出</string>
    <string name="emi_read">磁干扰指数:{0}</string>
    <string name="locating">定位中</string>
    <string name="udfine_name">未定义名字</string>
    <string name="professional_edition">专业测试版</string>
    <string name="text_inputslingname">输入信令名称</string>
    <string name="loading">立即登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="server_set_tip">服务器设置</string>
    <string name="basestation_damanager_tip">基站数据库管理</string>
    <string name="warningtone_set_tip">告警音设置</string>
    <string name="testfile_set_tip">测试文件设置</string>
    <string name="lockfrequency_set_tip">锁频设置</string>
    <string name="update_check_tip">检查更新</string>
    <string name="about_tip">关于</string>
    <string name="usercenter_set_tip">设置中心</string>
    <string name="ip_tip">IP地址</string>
    <string name="ip_hint_tip">192.168.1.1</string>
    <string name="port_tip">端口：</string>
    <string name="port_hint_tip">8080</string>
    <string name="downloadedlist_tip">已下载列表</string>
    <string name="station_db_tip">基站数据库</string>
    <string name="net_request_fail">网络请求失败，请检查网络设置</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="not_download">未下载</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">正在下载</string>
    <string name="download_wait">等待下载</string>
    <string name="update">更新</string>
    <string name="deling">正在删除...</string>
    <string name="uziping">解压中...</string>
    <string name="wait_download">等待下载中...</string>
    <string name="update_readly">准备更新...</string>
    <string name="record_testfile_tip">录制测试文件</string>
    <string name="stop_record_testfile">停止录制测试文件</string>
    <string name="signalname_tip">信令名称</string>
    <string name="eventname_tip">事件名称</string>
    <string name="time_tip">时间</string>
    <string name="type_tip">类型</string>
    <string name="icon_tip">图标</string>
    <string name="test_info_tip">测试信息</string>
    <string name="testfile_config_tip">测试文件配置</string>
    <string name="pci_tip">PCI:</string>
    <string name="uarfcn_tip">UARFCN:</string>
    <string name="tac_tip">TAC:</string>
    <string name="enb_tip">eNB:</string>
    <string name="band_tip">BAND:</string>
    <string name="ci_tip">CI:</string>
    <string name="format_tip">制式:</string>
    <string name="bandwidth_tip">BANDWidth(U/D):</string>
    <string name="longitude_tip">经度:</string>
    <string name="latitude_tip">纬度:</string>
    <string name="address_tip">地址:</string>
    <string name="hongzhan_test">宏站测试</string>
    <string name="shifen_test">室分测试</string>
    <string name="free_test">自由测试</string>
    <string name="pic_manager">图例管理</string>
    <string name="sta_filter">基站筛选</string>
    <string name="dist_meter">距离测量</string>
    <string name="map_mode_satellite">卫星地图</string>
    <string name="map_mode_2d">二维地图</string>
    <string name="cell_name_dis">小区名显示</string>
    <string name="cell_name_hide">小区名隐藏</string>
    <string name="area_lock">视野锁定</string>
    <string name="sec_dis">扇区显示</string>
    <string name="sec_hide">扇区隐藏</string>
    <string name="loc_update">位置更新</string>
    <string name="room_map">室内地图</string>
    <string name="conutry_code">ENodeBID:</string>
    <string name="station_name">基站名:</string>
    <string name="baud_rate">频点:</string>
    <string name="signal_level">信号强度:</string>
    <string name="signal_quality">信号质量:</string>
    <string name="connect_statu">连接状态:</string>
    <string name="test_msg">测试消息:</string>
    <string name="test_lat">纬度:</string>
    <string name="test_lng">经度:</string>
    <string name="connect_ip">测试内容:</string>
    <string name="test_net_speed">测试速率:</string>
    <string name="test_net_delay">测试时延:</string>
    <string name="move_speed">测试速度:</string>
    <string name="net_code">区县:</string>
    <string name="cell_num">小区编号:</string>
    <string name="identification_code">识别码(PCI):</string>
    <string name="station_distance">基站距离:</string>
    <string name="station_type">站点类型:</string>
    <string name="distance">距离:</string>
    <string name="station_height">站高:</string>
    <string name="inclinometer">电倾角:</string>
    <string name="antenna_num">天线平台数:</string>
    <string name="main_baud">主频点:</string>
    <string name="paging_zone">寻呼区:</string>
    <string name="azimuth_angle">方位角:</string>
    <string name="mechanical_tilt">机械倾角:</string>
    <string name="is_pull_away">是否拉远:</string>
    <string name="antenna_type">天线型号:</string>
    <string name="antenna_platform_name">天线平台:</string>
    <string name="best_over_area">理想最大覆盖距离:</string>
    <string name="location_offset">方位偏置:</string>
    <string name="predicted_level">预测强度:</string>
    <string name="predicted_model">预测模型:</string>
    <string name="nearest_disperse_station">最近宏站:</string>
    <string name="nearest_small_station">最近微站:</string>
    <string name="is_over_cell">是否越区:</string>
    <string name="is_over_baside">是否旁瓣覆盖:</string>
    <string name="over_stop">覆盖阻挡:</string>
    <string name="model_third_disturb">模三干扰:</string>
    <string name="change_block">切换阻塞:</string>
    <string name="test_mode_tip">测试方式</string>
    <string name="test_model_tip">测试模版</string>
    <string name="test_item_tip">测试项</string>
    <string name="test_sectorchoose_tip">扇区选择</string>
    <string name="test_antenna_tip">天线</string>
    <string name="test_type_tip">测试类型</string>
    <string name="floor_info_tip">楼层信息</string>
    <string name="remarks_info_tip">备注</string>
    <string name="fugai">覆盖</string>
    <string name="qiehuan">切换</string>
    <string name="waixie">外泄</string>
    <string name="model_name_tip">模版名:</string>
    <string name="serial_number_tip">编号</string>
    <string name="test_number_tip">测试次数</string>
    <string name="test_num_time_tip">测试次数/时间</string>
    <string name="test_set_name_tip">测试名称</string>
    <string name="test_set_mode_tip">测试模式</string>
    <string name="hold_set_time_tip">保持时间(S)</string>
    <string name="test_time">测试时长(s)</string>
    <string name="test_set_interval_tip">测试间隔(S)</string>
    <string name="wait_set_time_tip">等待时间间隔(S)</string>
    <string name="video_duration_tip">视频时长</string>
    <string name="target_url_tip">目标URL</string>
    <string name="coordination_mode_tip">协调方式</string>
    <string name="call_mode_tip">呼叫方式</string>
    <string name="called_number_tip">接收号码</string>
    <string name="called_passive_number_tip">被叫号码</string>
    <string name="block_time_tip">阻塞时间(S)</string>
    <string name="thread_num_tip">线程数量</string>
    <string name="stop_overtime_tip">停传超时(S)</string>
    <string name="execute_overtime_tip">执行超时(S)</string>
    <string name="server_path_tip">服务器路径</string>
    <string name="upload_limite_tip">上传大小(M)</string>
    <string name="speed_limite_tip">限速(Mb)</string>
    <string name="server_address_tip">服务器地址</string>
    <string name="account_tip">用户名</string>
    <string name="password_tip">密码</string>
    <string name="ftp_mode_tip">FTP模式</string>
    <string name="port_num_tip">端口</string>
    <string name="repeat_num">循环次数</string>
    <string name="confirm">确定</string>
    <string name="start_test">开始测试</string>
    <string name="stop_test">结束测试</string>
    <string name="signal_detail_tip">信令详情</string>
    <string name="search_tip">搜索</string>
    <string name="test_business">测试业务</string>
    <string name="model_config">模版配置</string>
    <string name="title_model_test">测试模版</string>
    <string name="title_modeltest_detail">模版详情</string>
    <string name="title_add_testitem">添加测试项</string>
    <string name="back">返回</string>
    <string name="model_name">模版名称</string>
    <string name="model_name_empty">模版名称不能为空</string>
    <string name="voice_call">VOICE_CALL</string>
    <string name="attach_detach">ATTACH/DETACH</string>
    <string name="idle">IDLE</string>
    <string name="wait">WAIT</string>
    <string name="ping">PING</string>
    <string name="video">VIDEO</string>
    <string name="http">HTTP</string>
    <string name="cancle">取消</string>
    <string name="toast_input_item_name">请输入测试项名称</string>
    <string name="toast_input_item_circle_times">请输入测试次数</string>
    <string name="toast_input_item_circle_times_min_max">请输入测试次数范围为0-10</string>
    <string name="toast_input_item_circle_time">请输入测试时间间隔0</string>
    <string name="toast_input_item_circle_time_min_max">请输入测试时间间隔0</string>
    <string name="input_account">请输入登陆账号</string>
    <string name="input_password">请输入登陆密码</string>
    <string name="account_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="logining_tip">登陆中，请稍后...</string>
    <string name="delete_fail">删除失败</string>
    <string name="db_update_fail">更新数据出错了</string>
    <string name="add_success">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="input_error_check">数据输入错误，请检查</string>
    <string name="num_input_error_check">数据输入错误，必须大于0且小于</string>
    <string name="thread_num_input_error">数据输入错误，线程数量必须大于0且小于11</string>
    <string name="cannot_empty_tip">不能为空</string>
    <string name="search_key_empty">搜索关键字不能为空</string>
    <string name="gis_test_info_tip">测试信息</string>
    <string name="gis_neib_cell_tip">邻区列表</string>
    <string name="gis_site_info_tip">基站信息</string>
    <string name="gis_live_analyze_tip">实时分析</string>
    <string name="gis_wireless_info_tip">无线参数</string>
    <string name="gis_defult_value">--</string>
    <string name="gis_neiborcell_label_cell_name">CellName</string>
    <string name="gis_neiborcell_label_earfcn">EARFCN</string>
    <string name="gis_neiborcell_label_pci">PCI</string>
    <string name="gis_neiborcell_label_eci">ECI</string>
    <string name="gis_neiborcell_label_rsrp">RSRP</string>
    <string name="gis_neiborcell_label_rsrq">RSRQ</string>
    <string name="gis_neiborcell_label_sinr">SINR</string>
    <string name="gis_neiborcell_label_rssi">RSSI</string>
    <string name="ip_not_set">请输入IP地址</string>
    <string name="port_not_set">请输入端口号</string>
    <string name="test_result_title">测试详情</string>
    <string name="model_cannot_empty">测试模版不能为空</string>
    <string name="testitem_cannot_empty">测试项不能为空</string>
    <string name="sector_cannot_empty">扇区不能为空</string>
    <string name="data_empty_tip">数据为空</string>
    <string name="searching_tip">搜索中，请稍后...</string>
    <string name="search_box_cannot_empty">搜索框不能为空</string>
    <string name="station_info_not_download">您的基站数据还未下载,请先下载</string>
    <string name="gis_map_tip">Gis地图</string>
    <string name="new_antenna">新增天线</string>
    <string name="tip_picture_collection">基站全景图片采集</string>
    <string name="antenna_message_collection">天线1信息采集</string>
    <string name="antenna_surface">天线外观</string>
    <string name="antenna_types">天线型号</string>
    <string name="azimuth_angle_range">方位角可调整范围</string>
    <string name="mechanical_tilt_range">机械下倾角可调整范围</string>
    <string name="elct_tilt_range">电子下倾角可调整范围</string>
    <string name="rf_cover_target">RF覆盖目标</string>
    <string name="antenna_hight">天线挂高</string>
    <string name="mechanical_tilts">机械下倾角</string>
    <string name="azimuth_angles">方位角</string>
    <string name="site_title">站点名称：%1$s</string>
    <string name="save">保存</string>
    <string name="nettype">网络制式：%1$s</string>
    <string name="operator_">运营商：%1$s</string>
</resources>