<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/basic_message_collection_background"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/net_creat"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/tx_get_antenna_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:text="@string/antenna_message_collection"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/new_antenna"
                android:textColor="@color/click_blue"
                android:background="@drawable/text_shape"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/antenna_message_img_gone"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="18dp"
                android:src="@mipmap/going" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_antenna_message_collection_gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/antenna_types" />

            <EditText
                android:id="@+id/tx_antenna_type"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/antenna_surface" />

            <Spinner
                android:id="@+id/village_surface_spinner"
                style="@style/work_spinnerstyle"></Spinner>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/azimuth_angle_range" />

            <EditText
                android:id="@+id/tx_angle_range"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/mechanical_tilt_range" />

            <EditText
                android:id="@+id/tx_mechanical_range"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/elct_tilt_range" />

            <EditText
                android:id="@+id/tx_elec_range"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/rf_cover_target" />

            <EditText
                android:id="@+id/tx_corver_target"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/antenna_hight" />

            <EditText
                android:id="@+id/tx_antenna_hight"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/mechanical_tilts" />

            <EditText
                android:id="@+id/tx_mechanical_tilt"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.75"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/azimuth_angles" />

            <EditText
                android:id="@+id/tx_azimuth"
                android:layout_width="0dp"
                android:layout_weight="4.75"
                android:layout_height="wrap_content"
                android:background="@color/basic_message_collection_background" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tip_picture_collection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_jizhan_takePhoto"
                android:layout_width="0dp"
                android:layout_weight="8.5"
                android:layout_marginLeft="5dp"
                android:background="@color/basic_message_collection_background"
                android:layout_height="48dp">

                <ImageButton
                    android:id="@+id/take_photo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/add_imageview" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dashLine"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@drawable/shape_slide"
            android:layout_marginTop="5dp"
            android:layerType="software"
            android:orientation="horizontal"
            >

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
